--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ unstructured[all-docs]
 python-dotenv
 langchain 
 langchain-community 
+langchain-chroma>=0.1.2
 langchain-openai 
 langchain-groq
 ipython
